# pd-extras

./: .coveragerc  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  build_container.sh  codecov.yml  pyproject.toml  requirements.txt  run_container.sh  tox.ini
.github/workflows/: codecov.yml  tox_build.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit
docs/source/: conf.py  index.rst  modules.rst  pandas_utils.check.rst  pandas_utils.extra.rst  pandas_utils.optimize.rst  pandas_utils.rst  pd_extras.check.rst  pd_extras.extra.rst  pd_extras.optimize.rst  pd_extras.rst  pd_extras.write.rst
pandas_utils/check/: sanitize.py
pandas_utils/extra/: flatten.py  operations.py
pandas_utils/optimize/: df_ops.py
pd_extras/check/: sanitize.py
pd_extras/extra/: flatten.py  flattener.py  operations.py
pd_extras/optimize/: df_ops.py
pd_extras/write/: bq_writer.py  common.py  nosql_writer.py  sql_writer.py
tests/: conftest.py
tests/check/: test_sanitize.py
tests/extra/: test_flatten.py  test_operations.py
tests/optimize/: test_df_ops.py
tests/write/: test_bq_writer.py  test_nosql_writer.py  test_sql_writer.py
