[tool.poetry]
name = "pandas-utils"
version = "1.0.0"
description = "Some utility functions on top of pandas."
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "pandas_utils" }]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.5.3"
sphinx = ">=6.1.3"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
coverage = "*"
bandit = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pandas-utils"
version = "1.1"
authors = [{ name = "Masum Billal", email = "billalmasum93@gmail.com" }]
description = "Some utility functions over pandas."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }

dependencies = ["pandas>=1.5.3", "sphinx>=6.1.3"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "requests", "pytest", "coverage"]
