[tool.poetry]
name = "pd-extras"
version = "3.1.6"
description = "Some utility functions on top of pandas."
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pd_extras" }]
repository = "https://github.com/proafxin/pandas-utils"
documentation = "https://pandas-utils.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.5.3"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"

[tool.poetry.group.formatting]
[tool.poetry.group.formatting.dependencies]
black = "*"
bandit = "*"
flake8 = "*"
isort = "*"


[tool.poetry.group.docs]

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3"
# pydata-sphinx-theme = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
