[tool.poetry]
name = "pd-extras"
version = "4.0.1"
description = "Some utility functions on top of pandas."
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pd_extras" }]
repository = "https://github.com/proafxin/pandas-utils"
documentation = "https://pandas-utils.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.3"
sqlalchemy = "^1.4.0"
pymongo = "*"
# google-cloud-bigquery = "*"
pymssql = "*"
mysqlclient = "*"
dnspython = "*"
pyarrow = "*"
pymysql = "*"
sqlalchemy-utils = "*"
psycopg2 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
requests = "*"

[tool.poetry.group.formatting]
[tool.poetry.group.formatting.dependencies]
black = "*"
bandit = "*"
flake8 = "*"
isort = "*"
types-requests = "*"
# types-google-cloud-ndb = "*"
pandas-stubs = "*"
sqlalchemy-stubs = "*"
types-python-dateutil = "*"
types-sqlalchemy-utils = "*"
types-sqlalchemy = "*"
# google-api-python-client-stubs = "*"
# google-auth-stubs = "*"
# types-protobuf = "*"
data-science-types = "*"
pymongo-stubs = "*"
pytest-stub = "*"

[tool.poetry.group.docs]

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3"
# pydata-sphinx-theme = "*"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]






[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
